--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div id="test"></div>
+    <div id="container"></div>
+    <button id="source-but">Source</button>
     <script type="module" src="index.js"></script>
 </body>
 
