--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container"></div>
     <button id="source-but">Source</button>
-    <script type="module" src="index.js"></script>
+    <script src='/bundle.js'></script>
 </body>
 
 </html>
